# Personal-GRC-Agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SPA_MVP  bootstrap.sh  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: pga-brain-paths.mdc  pga-core.mdc  pga-inbox-paths.mdc  pga-workspace-paths.mdc
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
agent/: autonomy-policy.yaml  charter.md  identity.yaml  runtime.config.yaml
connectors/: __init__.py  messages.py  registry.py
docs/: HANDOFF-phase1-fixes.md  HANDOFF-phase1.md  HANDOFF-phase2.md  HANDOFF-phase3.md  SPA_MVP.md  getting-started.md
evals/: README.md  crosswalk_eval.py  run_evals.py
governance/: redaction-rules.yaml  reliability-metrics.md  retention-policy.yaml
mcp/: aws.json.disabled  filesystem.json  gcp.json.disabled  github.json.disabled  granola.json.disabled  grc.json.disabled  linear.json.disabled  pga-governed.json  slack.json.disabled
scripts/: backup.sh  cloud-scan-cron.sh  install.sh  new-skill.sh  redteam.sh  seed_brain.py  setup-hermes.sh
security_personal_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
spa/: __init__.py  brain_packs.py  cli.py  cloud_scan.py  ingest.py  mcp_server.py  paths.py  runtime_init.py  selftest.py
tasks/: README.md  T1_fix_write_block.md  T2_configurable_state_paths.md  T3_eval_harness_green.md  T4_e2e_meeting_synth.md  T5_a3_gate_enforcement.md  T6_approval_queue_cli.md  T7_redaction_coverage.md  T8_ci_green.md  T9_connector_contract.md
tests/: test_approval_queue.py  test_audit_chain.py  test_autonomous_loop.py  test_brain_packs.py  test_cloud_connector.py  test_cloud_scan.py  test_connectors.py  test_crosswalk_eval.py  test_enforcement.py  test_evidence_pack.py  test_governance_policy.py  test_guard.py  test_ingest_e2e.py  test_ingest_signals.py  test_linear_connector.py  test_llm.py  test_mcp_server.py  test_memory.py  test_policy_redline.py  test_questionnaire.py  test_redaction.py  test_reliability_metrics.py  test_repo_scan.py  test_repo_security_review.py  test_runner.py  test_runtime_init.py  test_secrets_scan.py  test_skill_audit.py  test_skill_spec.py  test_ticket_publish.py  test_toolguard.py
(+211 files in other folders)
