[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "security-personal-assistant"
version = "0.1.0"
description = "Local-first, draft-by-default Security Personal Assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.1",
    "jsonschema>=4.23.0",
    "qdrant-client>=1.12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "gitpython>=3.1.43",
    "pytest>=8.3.0",
]

[project.scripts]
spa = "spa.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spa*", "connectors*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
