[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-grc-agent"
version = "0.1.0"
description = "Local-first, draft-by-default GRC copilot (PGA)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Personal GRC Agent Contributors" }]
keywords = ["grc", "compliance", "security", "agent", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pyyaml>=6.0.1",
    "jsonschema>=4.23.0",
    "qdrant-client>=1.12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "gitpython>=3.1.43",
    "sentence-transformers>=3.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[project.urls]
Homepage = "https://github.com/wcbot0/Personal-GRC-Agent"
Repository = "https://github.com/wcbot0/Personal-GRC-Agent"
Documentation = "https://github.com/wcbot0/Personal-GRC-Agent/blob/main/docs/getting-started.md"
Issues = "https://github.com/wcbot0/Personal-GRC-Agent/issues"

[project.scripts]
spa = "spa.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spa*", "connectors*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
